production/default/resources/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.clusters.zjusct.io"
      tls:
        certificateRefs:
        - kind: Secret
          name: clusters-zjusct-io-cert
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-passthrough
      protocol: TLS
      port: 444
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
---
# https://gateway-api.sigs.k8s.io/reference/spec/#tlsroute
# https://gateway-api.sigs.k8s.io/guides/tls/
# this exposes k8s apiserver using TLS passthrough
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: apiserver
  namespace: default
spec:
  hostnames:
  - k8s-api.s.zjusct.io
  - k8s-api.clusters.zjusct.io
  parentRefs:
  - name: envoy-gateway
    namespace: default
    sectionName: tls-passthrough
  rules:
  - backendRefs:
    - name: kubernetes
      port: 443
